<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


        <android.support.v7.widget.CardView style="@style/Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    style="@style/Name"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cla" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/Desc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rep" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/Desc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ver" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/Name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bru" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                android:id="@+id/textView4"
                style="@style/Desc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bil" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/Desc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inc" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/Card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/Name"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bar" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/Desc1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/Desc2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/usa" />
            </LinearLayout>

        </android.support.v7.widget.CardView>



</LinearLayout>